# LLM-robot-task-decomposition

./: README.md  task.json
dynamic_controller/: CMakeLists.txt  package.xml
dynamic_controller/include/dynamic_controller/: DynamicController.hpp
dynamic_controller/launch/: a5_with_redundancy.launch.py  a5_without_redundancy.launch.py
dynamic_controller/src/: DynamicController.cpp  dynamic_controller.cpp
highlevel_controller/: CMakeLists.txt  package.xml
highlevel_controller/launch/: a6.launch.py
highlevel_interfaces/: CMakeLists.txt
highlevel_interfaces/srv/: SetKD.srv
husky_keyboard_controller/: CMakeLists.txt  package.xml
husky_keyboard_controller/launch/: test_publisher_subscriber.launch.xml
install/: local_setup.sh  setup.sh
install/highlevel_controller/share/highlevel_controller/: package.bash  package.zsh
install/highlevel_interfaces/include/highlevel_interfaces/highlevel_interfaces/action/: pose_command.h  pose_command.hpp
install/highlevel_interfaces/include/highlevel_interfaces/highlevel_interfaces/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/highlevel_interfaces/include/highlevel_interfaces/highlevel_interfaces/srv/: move2d.h  move2d.hpp  move3d.h  set_kd.hpp
install/highlevel_interfaces/share/ament_index/resource_index/package_run_dependencies/: highlevel_interfaces
install/highlevel_interfaces/share/ament_index/resource_index/rosidl_interfaces/: highlevel_interfaces
install/highlevel_interfaces/share/highlevel_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/highlevel_interfaces/share/highlevel_interfaces/action/: PoseCommand.action
install/highlevel_interfaces/share/highlevel_interfaces/cmake/: export_highlevel_interfaces__rosidl_generator_cExport-noconfig.cmake  export_highlevel_interfaces__rosidl_generator_cExport.cmake  highlevel_interfacesConfig.cmake  highlevel_interfaces__rosidl_typesupport_cExport.cmake  highlevel_interfaces__rosidl_typesupport_cppExport.cmake  highlevel_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  highlevel_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  highlevel_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/highlevel_interfaces/share/highlevel_interfaces/srv/: Move2d.idl  Move2d.json  Move3d.idl  Move3d.json  SetKD.idl  SetKD.json
install/kinematic_controller/share/kinematic_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/potential_field/include/potential_field/: PotentialField2D.hpp  PotentialFieldActionServer.hpp  PotentialFieldJoint.hpp  PotentialFieldTask.hpp
install/potential_field/share/potential_field/: package.sh
install/potential_field/share/potential_field/launch/: potential_field_action_server.launch.xml
keyboard_controller/: CMakeLists.txt  package.xml
keyboard_controller/include/hello_topic/: HelloTopicPublisher.hpp
keyboard_controller/launch/: test_publisher.launch  test_publisher_subscriber.launch
keyboard_controller/src/: keyboard_controller_node.cpp
kinematic_controller/: CMakeLists.txt
kinematic_controller/include/kinematic_controller/: KinematicController.hpp
kinematic_controller/launch/: 3d.launch.xml  6d.launch.xml  a4_with_redundancy.launch.xml  a4_without_redundancy.launch.xml  final.launch.xml
kinematic_controller/src/: KinematicController.cpp  kinematic_controller.cpp
llm_project/: .gitignore  CMakeLists.txt  README.md  executor.py  package.xml  setup.py  task.json
llm_project/comp514_fp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llm_project/launch/: gen3_tabletop.launch.py
llm_project/llm/: llm_functions.py  task.json  test_decomposition.py  test_llms.py
llm_project/models/desk_brown/: model.sdf
llm_project/results/: detail.json  summary.json
llm_project/worlds/: empty.sdf  tabletop.sdf
log/: latest_build
potential_field/: CMakeLists.txt  package.xml
potential_field/include/potential_field/: PotentialField2D.hpp  PotentialFieldActionServer.hpp  PotentialFieldJoint.hpp  PotentialFieldTask.hpp
potential_field/launch/: potential_field_action_server.launch.xml  potential_field_joint_gripper.launch.xml  potential_field_task.launch.xml
potential_field/src/: PotentialField2D.cpp  PotentialFieldActionServer.cpp  PotentialFieldJoint.cpp  PotentialFieldTask.cpp  potential_field_2d.cpp  potential_field_action_server.cpp  potential_field_joint.cpp  potential_field_task.cpp
ros2_kortex_lite/: README.md
ros2_kortex_lite/kortex_bringup/: CMakeLists.txt  package.xml
ros2_kortex_lite/kortex_bringup/launch/: a3.launch.py  gen3.launch.py  gripper.launch.py  kortex_sim_control.launch copy.py  torque_control.launch.py
ros2_kortex_lite/kortex_bringup/src/: gazebo_spawner_manager.cpp  startup_manager.cpp
ros2_kortex_lite/kortex_controller/: CMakeLists.txt  package.xml
ros2_kortex_lite/kortex_controller/src/: joint_velocity_controller.cpp
ros2_kortex_lite/kortex_description/: CMakeLists.txt
ros2_kortex_lite/kortex_description/config/: initial_positions.yaml
ros2_kortex_lite/kortex_description/grippers/gen3_lite_2f/urdf/: gen3_lite_2f_macro.xacro  gen3_lite_2f_transmission_macro.xacro
ros2_kortex_lite/kortex_description/models/plastic_cup/: model.config
ros2_kortex_lite/kortex_description/models/table_marble/: model.config
ros2_kortex_lite/kortex_description/models/wood_cube_2_5cm/: model.config
ros2_kortex_lite/kortex_description/robots/: gen3.urdf  gen3_lite.gv
ros2_kortex_lite/kortex_description/worlds/: final.sdf  pick-and-place.sdf
ros2_kortex_lite/kortex_driver/: CMakeLists.txt
ros2_kortex_lite/kortex_sim/: CMakeLists.txt  package.xml
ros2_kortex_lite/kortex_sim/config/: a3.yaml
ros2_kortex_lite/kortex_sim/launch/: a3.launch.py  a4.launch.py  a5.launch.py  a6.launch.py  final.launch.py
(+38 files in other folders)
