<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>kortex_sim</name>
    <version>0.2.5</version>
    <description>Launch file and run-time simulation</description>

    <author>Hsiu-Chin Lin</author>

    <maintainer email="hsiu-chin.lin@mcgill.ca">Hsiu-Chin Lin</maintainer>

    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclcpp</depend>
    <exec_depend>kortex_controller</exec_depend>        
    <exec_depend>kortex_bringup</exec_depend>
    <exec_depend>highlevel_controller</exec_depend>
    <exec_depend>llm_project</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
